fix top bar on mobile

--- a/source/_sass/_homepage.scss
+++ b/source/_sass/_homepage.scss
@@ -31,6 +31,14 @@
     text-decoration: none;
     color: white;
   }
+
+  &__desktop { display: block; }
+  &__mobile { display: none; }
+
+  @media (max-width: 600px) {
+    &__desktop { display: none; }
+    &__mobile { display: block; }
+  }
 }
 
 .organization-logo {
